Switch remark.js back to https?

--- a/validation.html
+++ b/validation.html
@@ -410,7 +410,7 @@ class: center, middle
     </textarea>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
-    <script src="http://gnab.github.io/remark/downloads/remark-latest.min.js">
+    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
     </script>
     <script>
       remark.highlighter.engine = hljs
